# GPURayTracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  config_template.txt  make.bat  make_all.bat  remake.bat
configs/: config.txt  demo_1.txt  demo_2.txt  demo_refraction1.txt  demo_refraction2.txt  demo_solar_system.txt
shaders/ray_tracing/: RayTracing.compute
src/: CMakeLists.txt  Config.cpp  Config.h  DataStructures.cpp  DataStructures.h  Scene.cpp  Scene.h  Utils.cpp  Utils.h  main.cpp
